--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,23 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="typeColor">#a1a1a1</color>
+    <color name="transparent">#00FFFFFF</color>
+
+    <!--JobWantedEditorActivity-->
+    <color name="toolBarBg">#FFB706</color>
+    <color name="titleGrey">#FFB3B3B3</color>
+    <color name="titleSon">#FF202020</color>
+    <color name="buttonColor">#E0E0E0FF</color>
+    <color name="buttonTextColor">#FF5C5C5C</color>
+    <!--MainActivity-->
+    <color name="underToolBar">#F6F6F6FF</color>
+    <color name="underToolBarTextColorLeft">#ff999999</color>
+    <color name="underToolBarTextColorRight">#ff5c5c5c</color>
+    <color name="jobNameTitle">#ff02b8f7</color>
+    <color name="jobNameLabel">#ff898989</color>
+    <color name="deleteThisButton">#ff02b8f7</color>
+
+
+
 </resources>
