--- a/app/src/main/res/drawable/actionbar_bottom_border.xml
+++ b/app/src/main/res/drawable/actionbar_bottom_border.xml
@@ -2,15 +2,13 @@
     <!-- This is the main color -->
     <item>
         <shape>
-            <solid android:color="#E6E6E6" />
+            <solid android:color="#979797" />
         </shape>
     </item>
     <!-- This is the line -->
-    <item android:bottom="1px" >
+    <item android:bottom="1dp" >
         <shape>
             <solid android:color="#FFFFFF" />
         </shape>
     </item>
 </layer-list>
-
-
