--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,21 +4,28 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="typeColor">#a1a1a1</color>
+    <color name="white">#FFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="themeColor">#FFB706</color>
 
-    <!--JobWantedEditorActivity-->
+    <!--JobWantedEditActivity-->
     <color name="toolBarBg">#FFB706</color>
     <color name="titleGrey">#FFB3B3B3</color>
     <color name="titleSon">#FF202020</color>
     <color name="buttonColor">#E0E0E0FF</color>
     <color name="buttonTextColor">#FF5C5C5C</color>
-    <!--MainActivity-->
+    <!--JobWantedManageActivity-->
     <color name="underToolBar">#F6F6F6FF</color>
     <color name="underToolBarTextColorLeft">#ff999999</color>
     <color name="underToolBarTextColorRight">#ff5c5c5c</color>
     <color name="jobNameTitle">#ff02b8f7</color>
     <color name="jobNameLabel">#ff898989</color>
     <color name="deleteThisButton">#ff02b8f7</color>
+    <!--ProfessionSelectActivity-->
+    <color name="toolBarTextColor">#333333</color>
+    <color name="saveButtonTextColor">#FFB706</color>
+    <color name="lebelTextColor">#999999</color>
+    <color name="selectButtomTextColor">#ff202020</color>
 
 
 
