--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,11 @@
         <item name="android:statusBarColor">@color/transparent</item>
         <item name="isLightTheme">false</item>
     </style>
+
+    <style name="AppTheme.ActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:statusBarColor">@color/transparent</item>
+        <item name="isLightTheme">false</item>
+    </style>
 </resources>
