--- a/app/src/main/res/anim/fade_in_out.xml
+++ b/app/src/main/res/anim/fade_in_out.xml
@@ -2,4 +2,8 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
             android:duration="550"/>
+            <!--android:fromAlpha="1"-->
+            <!--android:toAlpha="0.2"-->
+
+
 </set>
