[Featrue]选择职位类型-搜索结果

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,5 +35,7 @@
 
     <!--JobSelectActivity-->
     <color name="shadowColor">#55000000</color>
+    <color name="describeTextColor">#B3B3B3</color>
+
 
 </resources>
