--- a/app/src/main/res/drawable/radius_border_unselect.xml
+++ b/app/src/main/res/drawable/radius_border_unselect.xml
@@ -21,20 +21,4 @@
             android:right="10dp"
             android:top="10dp" />
 </shape>
-
-<!--<layer-list xmlns:android="http://schemas.android.com/apk/res/android">-->
-<!--&lt;!&ndash; This is the main color &ndash;&gt;-->
-<!--<item>-->
-    <!--<shape>-->
-        <!--<solid android:color="#000000" />-->
-        <!--<corners android:radius="5dip" />-->
-    <!--</shape>-->
-<!--</item>-->
-<!--&lt;!&ndash; This is the line &ndash;&gt;-->
-<!--<item android:bottom="1dp" android:top="1dp" android:right="1dp" android:left="1dp" >-->
-    <!--<shape>-->
-        <!--<corners android:radius="5dip" />-->
-        <!--<solid android:color="#FFFFFF" />-->
-    <!--</shape>-->
-<!--</item>-->
-<!--</layer-list>-->
+<!--选项选中时-->
