[Add]Add to ten pages

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,7 +22,7 @@
     <color name="buttonColor">#E0E0E0FF</color>
     <color name="buttonTextColor">#FF5C5C5C</color>
     <!--JobWantedManageActivity-->
-    <color name="underToolBar">#F6F6F6FF</color>
+    <color name="underToolBar">#F6F6F6</color>
     <color name="underToolBarTextColorLeft">#ff999999</color>
     <color name="underToolBarTextColorRight">#ff5c5c5c</color>
     <color name="jobNameTitle">#ff02b8f7</color>
