--- a/app/src/main/res/drawable/radius_border_unselect.xml
+++ b/app/src/main/res/drawable/radius_border_unselect.xml
@@ -15,10 +15,10 @@
 <corners android:radius="5dip" />
 
 <!-- padding：Button里面的文字与Button边界的间隔 -->
-<padding
-        android:bottom="10dp"
-        android:left="10dp"
-        android:right="10dp"
-        android:top="10dp" />
+<!--<padding-->
+        <!--android:bottom="10dp"-->
+        <!--android:left="10dp"-->
+        <!--android:right="10dp"-->
+        <!--android:top="10dp" />-->
 </shape>
         <!--选项选中时-->
