--- a/app/src/main/res/drawable/bottom_border_graycd.xml
+++ b/app/src/main/res/drawable/bottom_border_graycd.xml
@@ -2,11 +2,11 @@
     <!-- This is the main color -->
     <item>
         <shape>
-            <solid android:color="#E6E6E6" />
+            <solid android:color="#CDCDCD" />
         </shape>
     </item>
     <!-- This is the line -->
-    <item android:bottom="2dp" >
+    <item android:bottom="1dp" >
         <shape>
             <solid android:color="#FFFFFF" />
         </shape>
