--- a/app/src/main/res/drawable/text_view_bottom_border_blue.xml
+++ b/app/src/main/res/drawable/text_view_bottom_border_blue.xml
@@ -6,7 +6,7 @@
         </shape>
     </item>
     <!-- This is the line -->
-    <item android:bottom="1pt" >
+    <item android:bottom="1dp" >
         <shape>
             <solid android:color="#FFFFFF" />
         </shape>
