--- a/app/src/main/res/drawable/border_graycd.xml
+++ b/app/src/main/res/drawable/border_graycd.xml
@@ -7,6 +7,8 @@
     <stroke
             android:width="1dp"
 
-            android:color="#cdcdcd" />
+            android:color="#cdcdcd"
+
+    />
 
 </shape>
