--- a/app/src/main/res/drawable/border_top_f2_ba.xml
+++ b/app/src/main/res/drawable/border_top_f2_ba.xml
@@ -7,6 +7,10 @@
     <stroke
             android:width="1dp"
 
-            android:color="#fff2f2f2" />
+            android:color="#BABABA" />
+
+
+    <solid android:color="#fff2f2f2" />
+
 
 </shape>
