[Add]add person information page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="grayE6">#E6E6E6</color>
     <color name="blue007AFF">#007AFF</color>
     <color name="black66000000">#66000000</color>
+    <color name="black20">#202020</color>
     <color name="translucentBlue">#0D02B8F7</color>
 
 
