--- a/app/src/main/res/drawable/border_theme.xml
+++ b/app/src/main/res/drawable/border_theme.xml
@@ -5,7 +5,8 @@
        android:useLevel="true">
 
     <stroke
-            android:width="2dp"
-            android:color="#000000" />
+            android:width="1dp"
+
+            android:color="#FFB706" />
 
 </shape>
