--- a/app/src/main/res/drawable/button_shape_grey.xml
+++ b/app/src/main/res/drawable/button_shape_grey.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <!--     默认背景色 -->
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="#FFCCCCCC"/>
     <!-- 边框 -->
     <stroke
             android:width="1dp"
-            android:color="#FF505050" />
+            android:color="#FFCCCCCC" />
     <!--     设置弧度 -->
     <corners
             android:radius="4dp"/>
