--- a/app/src/main/res/drawable/gray_thumb.xml
+++ b/app/src/main/res/drawable/gray_thumb.xml
@@ -8,8 +8,8 @@
     <corners android:radius="20dp"/>
     <!--变化率-->
     <gradient
-            android:endColor="#eeeeee"
-            android:startColor="#eeeeee" />
+            android:endColor="#FFFFFF"
+            android:startColor="#FFFFFF" />
     <stroke android:width="1dp"
-            android:color="#888888" />
+            android:color="#0A000000" />
 </shape>
