--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,9 @@
     <color name="grayCD">#CDCDCD</color>
     <color name="grayE6">#E6E6E6</color>
     <color name="blue007AFF">#007AFF</color>
+    <color name="blue0097D6">#0097D6</color>
+    <color name="blue02B8F7">#02B8F7</color>
+
     <color name="black66000000">#66000000</color>
     <color name="translucentBlue">#0D02B8F7</color>
 
