--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="gray89">#898989</color>
     <color name="gray9B">#9B9B9B</color>
     <color name="grayb3">#B3B3B3</color>
+    <color name="grayb8">#b8b8b8</color>
     <color name="gray97">#979797</color>
     <color name="grayEBEAEB">#EBEAEB</color>
     <color name="black33">#333333</color>
