--- a/app/src/main/res/layout/cancel_interview.xml
+++ b/app/src/main/res/layout/cancel_interview.xml
@@ -38,7 +38,7 @@
                     android:text="@string/cancelButton"
                     android:textSize="15sp"
                     android:textColor="@color/whiteFF"
-                    android:background="@color/grayCc"
+                    android:background="@color/graycc"
                     android:layout_weight="1"
                     android:layout_height="match_parent"/>
 
