--- a/app/src/main/res/layout/jike_topic_detail_coordinator_layout.xml
+++ b/app/src/main/res/layout/jike_topic_detail_coordinator_layout.xml
@@ -1,51 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/coordinator"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+<com.acorn.library.FoldNavScrollLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_marginTop="30dp"
+tools:context=".mvp.view.activity.company.CompanyInfoDetailActivity">
+
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/smooth_app_bar_layout"
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
         android:background="#ffffff">
 
-        <RelativeLayout
+        <FrameLayout
+
+            android:id="@+id/fold_nav_layout"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             app:layout_scrollFlags="scroll">
 
-            <ImageView
-                android:id="@+id/icon_iv"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                android:layout_centerInParent="true"
-                android:src="@mipmap/company_bg" />
 
 
 
-        </RelativeLayout>
+
+        </FrameLayout>
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
+            app:tabBackground="@color/transparent"
+            android:id="@+id/fold_tab_layout"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            app:tabIndicatorColor="@color/colorAccent"
-            app:tabIndicatorHeight="4dp"
-            app:tabSelectedTextColor="@color/colorAccent"
-            app:tabTextColor="#000" />
+            app:tabIndicatorColor="@color/themeColor"
+            app:tabIndicatorHeight="2dp"
+            app:tabSelectedTextColor="@color/black20"
+            app:tabTextColor="@color/black20" />
 
 
     </android.support.design.widget.AppBarLayout>
 
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
+        android:id="@+id/fold_content_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_height="wrap_content"/>
 
-</android.support.design.widget.CoordinatorLayout>
+</com.acorn.library.FoldNavScrollLayout>
