--- a/chatinput/src/main/res/layout/view_chatinput.xml
+++ b/chatinput/src/main/res/layout/view_chatinput.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="#fff"
     android:orientation="vertical">
 
     <LinearLayout
@@ -14,7 +14,6 @@
         android:id="@+id/aurora_ll_input_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:gravity="bottom"
         android:orientation="horizontal">
 
@@ -60,10 +59,9 @@
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_weight="800000000"
-            android:background="#00000000"
             android:cursorVisible="true"
             android:focusableInTouchMode="true"
-            android:gravity="center_vertical"
+            android:gravity="bottom"
             android:hint="新着メッセージ"
             android:imeOptions="actionSend"
             android:inputType="textMultiLine"
@@ -72,7 +70,7 @@
             android:paddingLeft="4dp"
             android:paddingTop="5dp"
             android:paddingRight="4dp"
-            android:paddingBottom="5dp"
+            android:paddingBottom="15dp"
             android:textColor="@android:color/black"
             android:textColorHint="#B3B3B3"
             android:textCursorDrawable="@drawable/aurora_edittext_cursor_bg"
