--- a/chatinput/src/main/res/layout/changyongyu.xml
+++ b/chatinput/src/main/res/layout/changyongyu.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#D8D8D8FF"
+        android:background="#d8d8d8"
 
         >
     </TextView>
