--- a/chatinput/src/main/res/layout/layout_chatinput_emoji.xml
+++ b/chatinput/src/main/res/layout/layout_chatinput_emoji.xml
@@ -24,10 +24,12 @@
 
     <include
         android:id="@+id/view_spit"
-        layout="@layout/view_spitview_horizontal"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/aurora_horizontalspit_view_height"
-        android:layout_above="@+id/view_etv" />
+        android:layout_height="1dp"
+        android:layout_above="@+id/view_etv"
+        layout="@layout/view_spitview_horizontal"
+
+        />
 
     <cn.jiguang.imui.chatinput.emoji.widget.EmoticonsToolBarView
         android:id="@+id/view_etv"
@@ -40,7 +42,10 @@
           <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+              android:background="#fff"
+
               android:orientation="horizontal">
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_weight="1"
