--- a/chatinput/src/main/res/layout/layout_chatinput_recordvoice.xml
+++ b/chatinput/src/main/res/layout/layout_chatinput_recordvoice.xml
@@ -3,7 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#d8d8d8"
 
+        />
     <RelativeLayout
         android:id="@+id/aurora_rl_recordvoice_top_container"
         android:layout_width="wrap_content"
