--- a/messagelist/src/main/res/layout/reset.xml
+++ b/messagelist/src/main/res/layout/reset.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:gravity="center_horizontal"
+    android:paddingBottom="15dp"
 >
 
 
