--- a/sample/exampleui/src/main/res/layout/activity_chat.xml
+++ b/sample/exampleui/src/main/res/layout/activity_chat.xml
@@ -4,7 +4,7 @@
     android:id="@+id/image_browser_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
 
     <LinearLayout
@@ -12,20 +12,20 @@
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:background="#ffffff"
-        android:orientation="vertical" >
+        android:orientation="vertical">
+
         <RelativeLayout
             android:id="@+id/message_actionBar"
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:background="@drawable/bottom_border">
 
-        <Toolbar
-            android:id="@+id/message_toolBar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:title=" "
-            android:navigationIcon="@drawable/icon_back"
-            />
+            <Toolbar
+                android:id="@+id/message_toolBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:navigationIcon="@drawable/icon_back"
+                android:title=" " />
 
             <LinearLayout
                 android:id="@+id/action_bar_title_container"
@@ -33,24 +33,22 @@
                 android:layout_height="45dp"
                 android:layout_alignParentBottom="true"
                 android:gravity="center"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
-              <TextView
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="清水さん"
-                  android:textColor="#333333"
-                  android:textSize="16sp"
-                  android:textStyle="bold"
-                  />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="清水さん"
+                    android:textColor="#333333"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="任天堂株式会社"
                     android:textColor="#202020"
-                    android:textSize="12sp"
-                    />
+                    android:textSize="12sp" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -59,31 +57,30 @@
             android:id="@+id/message_middle_select_bar_container"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:id="@+id/message_middle_select_bar1"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="60dp"
+                android:layout_weight="1"
                 android:gravity="center"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/message_middle_select_bar_image1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/phone_icon"
-                    />
+                    android:src="@drawable/phone_icon" />
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="7dip"
+                    android:text="電話交換を請求"
                     android:textColor="#777777"
                     android:textSize="11sp"
-                    android:text="電話交換を請求"
-                    android:layout_marginTop="7dip"
 
                     />
 
@@ -93,53 +90,51 @@
             <LinearLayout
                 android:id="@+id/message_middle_select_bar2"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="60dp"
+                android:layout_weight="1"
                 android:gravity="center"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/message_middle_select_bar_image2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/line_icon"
-                    />
+                    android:src="@drawable/line_icon" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="7dip"
+                    android:text="電話交換を請求"
                     android:textColor="#777777"
                     android:textSize="11sp"
-                    android:text="電話交換を請求"
-                    android:layout_marginTop="7dip"
 
                     />
 
             </LinearLayout>
 
 
-
             <LinearLayout
                 android:id="@+id/message_middle_select_bar3"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="60dp"
+                android:layout_weight="1"
                 android:gravity="center"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/message_middle_select_bar_image3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/self_introduce_icon"
-                    />
+                    android:src="@drawable/self_introduce_icon" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="7dip"
+                    android:text="電話交換を請求"
                     android:textColor="#777777"
                     android:textSize="11sp"
-                    android:text="電話交換を請求"
-                    android:layout_marginTop="7dip"
 
                     />
 
@@ -150,26 +145,24 @@
             <LinearLayout
                 android:id="@+id/message_middle_select_bar4"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="60dp"
+                android:layout_weight="1"
                 android:gravity="center"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/message_middle_select_bar_image4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/label_icon"
-                    />
+                    android:src="@drawable/label_icon" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#777777"
-                    android:textSize="11sp"
-                    android:text="電話交換を請求"
                     android:layout_marginTop="7dip"
-                    />
+                    android:text="電話交換を請求"
+                    android:textColor="#777777"
+                    android:textSize="11sp" />
 
             </LinearLayout>
 
@@ -182,79 +175,82 @@
 
 
 
-
-
-
-
-
-
-
-
-
-    <imui.jiguang.cn.imuisample.views.ChatView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <imui.jiguang.cn.imuisample.views.ChatView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/chat_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#f3f3f3"
         android:layout_marginTop="10dp"
+        android:background="#f3f3f3"
         android:orientation="vertical">
 
 
 
+<!--<ScrollView-->
+
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+
+    <!--&gt;-->
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="500dp"-->
+        <!--android:background="#000"-->
+        <!--android:orientation="vertical">-->
 
 
-        <cn.jiguang.imui.messages.ptr.PullToRefreshLayout
-            android:id="@+id/pull_to_refresh_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:PtrCloseDuration="300"
-            app:PtrCloseHeaderDuration="2000"
-            app:PtrKeepHeaderWhenRefresh="true"
-            app:PtrPullToRefresh="true"
-            app:PtrRatioHeightToRefresh="1.2"
-            app:PtrResistance="1.2"
-            android:background="#f6f6f6"
-            android:gravity="bottom"
-            android:layout_above="@+id/chat_input"
-            android:layout_below="@+id/title_container">
 
-            <cn.jiguang.imui.messages.MessageList
-                android:id="@+id/msg_list"
+            <cn.jiguang.imui.messages.ptr.PullToRefreshLayout
+                android:id="@+id/pull_to_refresh_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:avatarHeight="48dp"
-                app:avatarWidth="48dp"
-                app:showReceiverDisplayName="true"
-                app:showSenderDisplayName="false"
-                app:avatarRadius="5dp"
-                app:bubbleMaxWidth="0.70"
-                app:dateTextSize="14sp"
-                app:receiveBubblePaddingLeft="16dp"
-                app:receiveBubblePaddingRight="8dp"
-                app:receiveTextColor="#ffffff"
-                app:receiveTextSize="16sp"
-                app:sendBubblePaddingLeft="8dp"
-                app:sendBubblePaddingRight="16dp"
-                app:sendTextColor="#7587A8"
-                app:sendTextSize="16sp" />
+                android:layout_above="@+id/chat_input"
+                android:layout_below="@+id/title_container"
+                android:background="#f6f6f6"
+                android:gravity="bottom"
+                app:PtrCloseDuration="300"
+                app:PtrCloseHeaderDuration="2000"
+                app:PtrKeepHeaderWhenRefresh="true"
+                app:PtrPullToRefresh="true"
+                app:PtrRatioHeightToRefresh="1.2"
+                app:PtrResistance="1.2">
 
-        </cn.jiguang.imui.messages.ptr.PullToRefreshLayout>
+                <cn.jiguang.imui.messages.MessageList
+                    android:id="@+id/msg_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:avatarHeight="48dp"
+                    app:avatarRadius="5dp"
+                    app:avatarWidth="48dp"
+                    app:bubbleMaxWidth="0.70"
+                    app:dateTextSize="14sp"
+                    app:receiveBubblePaddingLeft="16dp"
+                    app:receiveBubblePaddingRight="8dp"
+                    app:receiveTextColor="#ffffff"
+                    app:receiveTextSize="16sp"
+                    app:sendBubblePaddingLeft="8dp"
+                    app:sendBubblePaddingRight="16dp"
+                    app:sendTextColor="#7587A8"
+                    app:sendTextSize="16sp"
+                    app:showReceiverDisplayName="true"
+                    app:showSenderDisplayName="false" />
+
+            </cn.jiguang.imui.messages.ptr.PullToRefreshLayout>
 
 
-        <cn.jiguang.imui.chatinput.ChatInputView
-            android:id="@+id/chat_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            app:inputMarginLeft="3dp"
-            app:inputMarginRight="3dp"
-            app:cameraQuality="0.6"
-            app:showSelectAlbum="true"/>
+            <cn.jiguang.imui.chatinput.ChatInputView
+                android:id="@+id/chat_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                app:cameraQuality="0.6"
+                app:inputMarginLeft="3dp"
+                app:inputMarginRight="3dp"
+                app:showSelectAlbum="true" />
 
+    <!--</LinearLayout>-->
+<!--</ScrollView>-->
 
     </imui.jiguang.cn.imuisample.views.ChatView>
-
 
 
 </LinearLayout>
