[Feature]聊天框顶部菜单及其子项的选择和界面反馈

--- a/sample/exampleui/src/main/res/values/colors.xml
+++ b/sample/exampleui/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="google_blue">#FF375BF1</color>
     <color name="google_yellow">#FFF7D23E</color>
     <color name="google_green">#FF34A350</color>
+
+    <color name="theme">#FFB706</color>
+    <color name="black20">#202020</color>
+
 </resources>
