[Featrue]聊天，图片视频选择，发送图片，视频

--- a/chatinput/src/main/res/layout/layout_chatinput_selectphoto.xml
+++ b/chatinput/src/main/res/layout/layout_chatinput_selectphoto.xml
@@ -1,28 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/aurora_recyclerview_selectphoto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <include layout="@layout/view_spitview_horizontal" />
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        android:layout_marginTop="1dp"
+        android:layout_weight="1">
 
-    <ProgressBar
-        android:id="@+id/aurora_progressbar_selectphoto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="gone"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/aurora_recyclerview_selectphoto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-    <ImageButton
-        android:id="@+id/aurora_imagebtn_selectphoto_album"
-        android:layout_width="@dimen/aurora_size_album_button"
-        android:layout_height="@dimen/aurora_size_album_button"
-        android:layout_gravity="bottom|right"
-        android:layout_marginBottom="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/aurora_selectphoto_album"
-        android:visibility="visible"/>
+        <ProgressBar
+            android:id="@+id/aurora_progressbar_selectphoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone" />
 
-</FrameLayout>
+        <ImageButton
+            android:id="@+id/aurora_imagebtn_selectphoto_album"
+            android:layout_width="@dimen/aurora_size_album_button"
+            android:layout_height="@dimen/aurora_size_album_button"
+            android:layout_gravity="bottom|right"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/aurora_selectphoto_album"
+            android:visibility="visible" />
+
+    </FrameLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="1dp"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="アルバム"
+            android:textSize="12sp"
+            android:padding="5dp"
+            android:textColor="#666"
+            android:background="@drawable/radius_button_theme"
+            android:layout_marginRight="10dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            />
+
+        <TextView
+            android:id="@+id/selected_photo_send"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="发 送"
+            android:textSize="12sp"
+            android:padding="5dp"
+            android:textColor="#666"
+            android:background="@drawable/radius_button_theme"
+            android:layout_marginRight="10dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+
+            />
+
+
+    </RelativeLayout>
+</LinearLayout>
