--- a/chatinput/src/main/res/layout/item_photo_select.xml
+++ b/chatinput/src/main/res/layout/item_photo_select.xml
@@ -3,11 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:paddingRight="8dp">
 
     <ImageView
         android:id="@+id/image_photoselect_photo"
         android:layout_width="match_parent"
+        android:layout_centerInParent="true"
+
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/aurora_picture_not_found" />
@@ -16,18 +19,29 @@
         android:id="@+id/image_photoselect_shadow"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+
         android:src="@drawable/aurora_selectphoto_shadow"
         android:visibility="invisible" />
 
-    <ImageView
-        android:id="@+id/image_photoselect_tick"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center"
-        android:src="@drawable/aurora_selectphoto_checked_icon"
-        android:visibility="gone"
-        tools:visibility="visible" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/image_photoselect_tick"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/aurora_selectphoto_checked_icon"
+            android:visibility="gone"
+            android:layout_marginTop="50dp"
+            tools:visibility="visible" />
+
+    </LinearLayout>
+
+
+
 
     <TextView
         android:id="@+id/text_photoselect_duration"
