--- a/app/src/main/res/layout/radion.xml
+++ b/app/src/main/res/layout/radion.xml
@@ -8,7 +8,7 @@
               android:orientation="vertical">
 
     <CheckBox
-            android:id="@+id/btnMan"
+            android:id="@+id/cornerstone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="7dp"
