--- a/chatinput/src/main/res/layout/view_chatinput.xml
+++ b/chatinput/src/main/res/layout/view_chatinput.xml
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="bottom"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+       >
 
 
         <LinearLayout
@@ -125,8 +126,7 @@
         android:layout_width="match_parent"
         android:layout_height="103dp"
         android:orientation="vertical"
-        android:visibility="gone"
-        >
+        android:visibility="gone">
 
         <TextView
             android:layout_width="match_parent"
@@ -137,9 +137,6 @@
             />
 
 
-
-
-
         <include
 
 
@@ -148,29 +145,21 @@
             layout="@layout/layout_chatinput_menu" />
 
 
-
-
-
     </LinearLayout>
-
 
 
     <FrameLayout
         android:id="@+id/my_menu_container_fake"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        >
-    </FrameLayout>
-
-
+        android:layout_height="0dp"></FrameLayout>
 
 
     <FrameLayout
         android:id="@+id/my_menu_area_container"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:visibility="gone">
 
         <include
             android:id="@+id/aurora_rl_recordvoice_container"
