--- a/chatinput/src/main/res/layout/layout_chatinput_camera.xml
+++ b/chatinput/src/main/res/layout/layout_chatinput_camera.xml
@@ -18,9 +18,9 @@
         android:layout_gravity="top|start"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/aurora_preview_close_camera"
-        android:visibility="gone"
+
         tools:visibility="visible" />
 
     <ImageButton
@@ -31,6 +31,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="20dp"
+        android:visibility="gone"
         android:background="@drawable/aurora_preview_full_screen" />
 
     <ImageButton
@@ -41,7 +42,31 @@
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
+        android:visibility="gone"
+
         android:background="@drawable/aurora_preview_record_video" />
+
+
+    <ImageButton
+        android:id="@+id/aurora_ib_send_pic"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="bottom|left"
+        android:layout_marginBottom="12dp"
+        android:layout_marginLeft="10dp"
+        android:background="#00ffffff" />
+
+
+
+    <ImageButton
+        android:id="@+id/aurora_ib_retake"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="12dp"
+        android:layout_marginRight="10dp"
+        android:background="#00ffffff" />
+
 
     <ImageButton
         android:id="@+id/aurora_ib_camera_capture"
@@ -55,8 +80,8 @@
         android:id="@+id/aurora_ib_camera_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="20dp"
+        android:layout_gravity="top|end"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/aurora_preview_switch_camera" />
