[Update]调试发送图片的位置和大小

--- a/chatinput/src/main/res/layout/layout_chatinput_camera.xml
+++ b/chatinput/src/main/res/layout/layout_chatinput_camera.xml
@@ -47,24 +47,29 @@
         android:background="@drawable/aurora_preview_record_video" />
 
 
-    <ImageButton
+    <ImageView
         android:id="@+id/aurora_ib_send_pic"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_gravity="bottom|left"
         android:layout_marginBottom="12dp"
         android:layout_marginLeft="10dp"
+        android:src="@drawable/aurora_menuitem_send_pres"
+        android:visibility="gone"
         android:background="#00ffffff" />
 
 
 
-    <ImageButton
+    <ImageView
         android:id="@+id/aurora_ib_retake"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="12dp"
         android:layout_marginRight="10dp"
+        android:src="@drawable/aurora_menuitem_send_pres"
+        android:visibility="gone"
+
         android:background="#00ffffff" />
 
 
