--- a/messagelist/src/main/res/layout/item_send_photo.xml
+++ b/messagelist/src/main/res/layout/item_send_photo.xml
@@ -50,14 +50,15 @@
 
         <cn.jiguang.imui.view.ShapeImageView
             android:id="@+id/aurora_iv_msgitem_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:adjustViewBounds="true"
             android:layout_below="@+id/aurora_tv_msgitem_sender_display_name"
             android:layout_toLeftOf="@+id/aurora_iv_msgitem_avatar"
             android:maxHeight="200dp"
             android:maxWidth="200dp"
             android:src="@drawable/aurora_picture_not_found"
+            android:padding="5dp"
             app:photoMessageRadius="8dp"
             />
 
