--- a/app/src/main/res/layout/roll_choose.xml
+++ b/app/src/main/res/layout/roll_choose.xml
@@ -4,7 +4,7 @@
                 android:layout_height="match_parent">
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="220dp"
             android:orientation="vertical"
             android:background="@color/originColor"
             android:layout_alignParentBottom="true">
@@ -25,7 +25,8 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:text="履歴書の表示"
-                    android:textSize="15sp"/>
+                    android:textSize="15sp"
+                    android:textStyle="bold"/>
             <Toolbar
                     android:id="@+id/tool2"
                     android:layout_width="20dp"
@@ -43,7 +44,8 @@
                 android:id="@+id/picker_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"/>
+                android:layout_alignParentBottom="true"
+                android:layout_marginTop="10dp"/>
 
     </LinearLayout>
 </RelativeLayout>
