[聊天接口，文字信息发送接收]

--- a/messagelist/src/main/res/layout/item_send_text.xml
+++ b/messagelist/src/main/res/layout/item_send_text.xml
@@ -98,6 +98,7 @@
                 android:layout_gravity="right"
                 android:textSize="11sp"
                 android:textColor="#999999"
+                android:visibility="gone"
                 android:text="送达"
                 />
 
