[Update]联系人列表远程图片展示,聊天界面历史信息获取,聊天界面加载更多的监听器更新

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -246,6 +246,7 @@
                             android:id="@+id/msg_list"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:scrollbars="vertical"
                             app:avatarHeight="48dp"
                             app:avatarRadius="5dp"
                             app:avatarWidth="48dp"
