--- a/messagelist/src/main/res/layout/item_receive_photo.xml
+++ b/messagelist/src/main/res/layout/item_receive_photo.xml
@@ -22,20 +22,24 @@
             style="@style/aurora_msgitem_receiver_display_name_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_toRightOf="@id/aurora_iv_msgitem_avatar"
             />
 
         <cn.jiguang.imui.view.ShapeImageView
             android:id="@+id/aurora_iv_msgitem_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:adjustViewBounds="true"
+            android:background="#000"
             android:maxHeight="200dp"
             android:maxWidth="200dp"
             android:layout_below="@id/aurora_tv_msgitem_receiver_display_name"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/aurora_iv_msgitem_avatar"
             android:src="@drawable/aurora_picture_not_found"
+            android:padding="0dp"
+
             app:photoMessageRadius="8dp"
             />
 
